# UDPGameNetworking

./: .gitignore  CMakeLists.txt  README.md
UDPGameNetworking/: CMakeLists.txt  Client.cpp  Client.h  ClientInfo.h  ConnectedClient.h  EndpointInfo.h  ImportantMessage.cpp  ImportantMessage.h  NetworkMessage.cpp  NetworkMessage.h  NetworkUtilities.cpp  NetworkUtilities.h  NetworkedObject.cpp  NetworkedObject.h  Server.cpp  Server.h  TestingFunctions.cpp  TestingFunctions.h  UDPGameNetworking.cpp  UDPGameNetworking.h  UDPGameNetworkingAPI.h
UDPGameNetworking/CustomStreaming/: CustomSteamedValue.cpp  CustomStreamedValue.h  INetworkedValue.h  NetworkedValue.cpp  NetworkedValue.h  PositionLerp2D.cpp  PositionLerp2D.h
UDPGameNetworking/Demo/: ColourValue.cpp  ColourValue.h  Demo.cpp  Demo.h  DemoCallback.cpp  DemoCallback.h  DemoColourSquare.cpp  DemoColourSquare.h  DemoWrapper.cpp  DemoWrapper.h
UDPGameNetworking/Endpoints/: Client.cpp  Client.h  EndpointInfo.h  Server.cpp  Server.h  SocketHolder.cpp  SocketHolder.h
UDPGameNetworking/NetworkObjects/: NetworkObject.h  NetworkedValue.cpp  NetworkedValue.h  ObjectDataProcessor.cpp  ObjectDataProcessor.h  OwnedNO.cpp  OwnedNO.h  PositionLerp2D.cpp  PositionLerp2D.h  UnownedNO.cpp  UnownedNO.h
UDPGameNetworking/NetworkedObject/: NetworkedValue.cpp  NetworkedValue.h  ObjectDataProcessor.cpp  ObjectDataProcessor.h  OwnedNO.cpp  OwnedNO.h  UnownedNO.cpp  UnownedNO.h
UDPGameNetworking/Senders/: ClientMessageSender.cpp  ClientMessageSender.h  MessageSender.cpp  MessageSender.h  ServerMessageSender.cpp  ServerMessageSender.h
UDPGameNetworking/Testing/: TestEngineObject.cpp  TestEngineObject.h  TestWrapper.cpp  TestWrapper.h
UDPGameNetworking/Wrapper/: Callback.cpp  Callback.h  IEngineObject.h  IWrapper.h  LibSettings.h  TestWrapper.cpp  TestWrapper.h
